Fix button on mobile (hopefully)

--- a/css/index.css
+++ b/css/index.css
@@ -75,6 +75,7 @@ li a:hover:not(.active) {
         font-size: 30px;
         border: none;
         cursor: pointer;
+        z-index: 99;
     }
   }
 
